Make sure @gabro wont cringe when viewing on mobile

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -64,3 +64,25 @@ pre {
 }
 
 @media only screen and (min-width: 1500px) {}
+
+/* Helper classes to toggling content for specific devices */
+
+span.widescreen-only {
+    display: none;
+}
+
+span.non-widescreen-only {
+    display: none;
+}
+
+@media only screen and (min-width: 1400px) {
+    span.widescreen-only {
+        display: inline;
+    }
+}
+
+@media only screen and (max-width: 1400px) {
+    span.non-widescreen-only {
+        display: inline;
+    }
+}
